<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_app_title_text"
            android:textColor="@color/dark_grey"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/source_unit_spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/source_unit_spinner_description"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_02"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_05"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_02"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_01" />

        <Spinner
            android:id="@+id/destination_unit_spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/destination_unit_spinner_description"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_02"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_03"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_04"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_01" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_04"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_03"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_02"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_03">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:hint="@string/enter_value_hint_text"
                android:inputType="numberDecimal"
                android:textColor="@color/light_grey"
                android:textColorHint="@color/light_grey"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_button"
            android:textColor="@color/dark_grey"
            app:backgroundTint="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_05"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_03"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_02"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_04" />

        <TextView
            android:id="@+id/output_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_value_hint"
            android:textColor="@color/dark_grey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_07"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_03"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_02"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>